# cartwise

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.toml.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASES.md  README.md  REQUIREMENTS.md  codecov.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  settings.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
02/96a596db2f/: metadata.json
04/fe7b3ddbd3/: metadata.json
06/e46d7ce9fb/: metadata.json
07/7afce8f5f3/: metadata.json
09/a0af939990/: metadata.json
0e/dbf92047c9/: metadata.json
13/b097777388/: metadata.json
15/f9d7cd4835/: metadata.json
17/837d33cd2f/: metadata.json
17/91ed0ea284/: metadata.json
1d/a5ee0ce737/: metadata.json
26/84e74d197d/: metadata.json
27/4f86d777ee/: metadata.json
2b/55ee643faf/: metadata.json
2c/1140c3d605/: metadata.json
2d/1160a946c6/: metadata.json
31/47a6cddfe8/: metadata.json
31/a9b644eb90/: metadata.json
alembic/: env.py
app/: config.py  main.py
app/ai/: client.py
backend/: .secrets.toml.example  CLAUDE.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
mock/: __init__.py  splitwise.py
tests/: conftest.py  test_ai_client.py  test_extract.py  test_integration.py  test_meal_plans.py  test_menu_items.py  test_services.py  test_split.py  test_users.py
ui/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
(+435 files in other folders)
